fix .alignfull compatibility with jetpack tiled gallery block

--- a/assets/scss/parts/_global.scss
+++ b/assets/scss/parts/_global.scss
@@ -1,6 +1,6 @@
 a:hover {@apply text-nucssa-standard;}
 .alignfull {@apply w-screen;
-  margin-left: calc(-50vw + 50%);
+  margin-left: calc(-50vw + 50%) !important; // `important` is required here to override jetpack tiled gallery stying
 }
 .alignwide {@apply w-screen -mx-6;
   margin-left: calc(-50vw + 50%);
